[project]
name = "image-transform-api"
version = "0.1.0"
description = "A simple API for transforming images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "flasgger>=0.9.7.1",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-decouple>=3.8",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.2",
]

[tool.ruff]
lint.select = ["F401", "N802", "N803", "N806"]
